--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Benjamin Dunning
+title: Benjamin Dungeon
 email: bend@hcasaints.com
 description: > # this means to ignore newlines until "baseurl:"
-  Hi, I am Benjamin Dunning. This is my personal website. 
+  Hi, I am Benjamin Dungeon. This is my personal website. 
   It's a place where I can just post about whatever I feel like at the moment. 
   I hope you enjoy!
 baseurl: "" # the subpath of your site, e.g. /blog
